sumo/tests/sumo/errors/network/junction/root__junction#type__empty3/errors.sumo
Error: Attribute 'type' in definition of junction '3' is empty.
Quitting (on error).
